Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-41951

Can't navigate submenus with keyboard

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.0 RC
    • 5.3.2, 5.4.0, 5.4.1, 5.5.0 Alpha, 5.5.0
    • Quick: Controls 1
    • None
    • Kubuntu Linux 64bit
    • a33fe70970d891e096fff6a84d7e0c02f8ee978a

      I have a menubar with a menu containing another menu. I can open this menu with the alt-letter keyboard combination, and navigate it with the cursor keys. (In my case, a "recent files"-menu.)

      However once I enter a sub-menu, I'm stuck, keyboard events do not seem to be received by the submenu. I can only continue by using the mouse instead.

        1. main.qml
          0.9 kB
          Liang Qi
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            cuke Filippo Cucchetto
            pyrrhula Ola Røer Thorsen
            Votes:
            2 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes