Fixed keyboard navigation in submenus

This bug was due to a couple of factors interacting:
1) the QQuickMenu::__popupVisible property is not in sync with the
   popupWindow::visible property. In fact, the QQuickMenu::__popupVisible
   becomes true before the PopupWindow::Show() method is called.
2) In the Menu.qml file, the menu content item is created through the user
   of Loader, whose active property becomes true when the
   QQuickMenu::__popupVisible property is true. So the result is that the
   MenuContentItem is created before the QQuickPopupWindow is effectively
   visible.
3) Given point (2), the MenuContentItem requests focus on creation (since
   it has focus: true). However, given (1), the QQuickPopupWindow is
   neither visible nor active.
This patch addresses this problem by forcing activeFocus to the
menuContentItem only when the popupWindow gets focus.

Task-number: QTBUG-41951
Change-Id: I095700726aab4ac45a62cd37b33a069e294df30e
Reviewed-by: J-P Nurmi <jpnurmi@theqtcompany.com>